# interview-hub

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  dependencies.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: __init__.py  admin.py  auth.py  interviews.py
apps/api/app/core/: __init__.py  config.py  errors.py
apps/api/app/models/: __init__.py  api.py  persistence.py  runtime.py
apps/api/app/repositories/: __init__.py  in_memory.py  persistence.py  postgres_persistence.py  sqlite_persistence.py
apps/api/app/services/: admin_interviewers.py  catalog.py  doubao_client.py  feedback.py  formal_question_bank.py  interview.py  interview_prompts.py  interview_provider.py  realtime.py  secondme_client.py  secondme_oauth.py  secondme_oauth_client.py  secondme_visitor_client.py
apps/api/tests/: test_auth_routes.py  test_config.py  test_interview_service.py  test_realtime_channel.py  test_secondme_oauth_service.py
apps/web/: .env.example  index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  index.css
docs/: PRD.md  PRD.ms  design.md  openapi.yaml  weekly-report-2026-04-27.md
openspec/: config.yaml
openspec/changes/add-interviewer-owned-question-banks/: design.md  (+2 more)
stitch_exports/feedback_report/: code.html
stitch_exports/interview_setup/: code.html
stitch_exports/live_interview/: code.html
stitch_exports/mono_utility/: DESIGN.md
stitch_exports/mvp_home/: code.html
(+144 files in other folders)
