[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-hub-api"
version = "0.1.0"
description = "SecondMe-backed API service for the Interview Hub MVP"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "websocket-client>=1.9.0,<2.0.0"
]

[tool.setuptools]
packages = ["app"]
